# FlexiPwn

./: .gitignore  README.md  SCHEMA.md  pyproject.toml  setup-images.sh
docker/attacker/: Dockerfile  flexipwn-status.sh
docker/attacker-web/: Dockerfile
docker/privesc/: Dockerfile
docker/sqli-mysql/: Dockerfile  app.py  init.sql  start.sh
docker/vuln-command-injection/: Dockerfile  app.py
docs/: CONTRIBUTING-monitores-targets.md  tests-w13.md
scenarios/: batch.yaml  command-injection-demo-logical.yaml  command-injection-demo.yaml  privesc-demo-logical.yaml  privesc-demo.yaml  sqli-mysql-demo-logical.yaml  sqli-mysql-demo.yaml
scripts/: containment_check.sh  manual_test.py  test_remote_access.py
src/flexipwn/: __init__.py  config.py  observability.py
src/flexipwn/cli/: main.py  participant.py  run.py  scenario.py
src/flexipwn/core/: super_monitor.py
src/flexipwn/db/: models.py  repository.py  session.py
src/flexipwn/layer1/: __init__.py  docker_rootless.py  provider.py
src/flexipwn/layer2/: __init__.py  events.py  filesystem.py  log.py  network.py  orchestrator.py  process.py
src/flexipwn/layer3/: engine.py  schema.py
src/flexipwn/layer4/: cli.py
src/flexipwn/tests/: test_batch_start_failures.py  test_daemon_loop.py  test_dashboard_feed.py  test_db.py  test_docker_integration.py  test_layer2_filesystem.py  test_layer2_log.py  test_layer2_network.py  test_layer2_process.py  test_layer3_engine.py  test_layer3_log_pattern.py  test_layer3_network_evaluators.py  test_notifications.py  test_pid_file.py  test_port_allocator.py  test_repl.py  (+7 more)
(+24 files in other folders)
