[project]
name = "flexipwn"
version = "0.1.0"
description = "Plataforma educativa de ciberseguridad ofensiva"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "sqlmodel>=0.0.14",
    "bcrypt>=4.0",
    "watchdog>=6.0",
]

[project.scripts]
flexipwn = "flexipwn.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[tool.pytest.ini_options]
markers = ["integration: tests que requieren Docker disponible"]
testpaths = ["src/flexipwn/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flexipwn"]
